--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,8 +51,10 @@ Suggests:
     BiocStyle,
     RefManageR,
     rmarkdown,
-    knitr
+    knitr,
+    testthat (>= 3.0.0)
 URL: https://github.com/BiodataAnalysisGroup/lineagespot
 BugReports: https://github.com/BiodataAnalysisGroup/lineagespot/issues
 BiocType: Software
 VignetteBuilder: knitr
+Config/testthat/edition: 3
