pass check nikopech

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(get_lineage_report)
 export(lineagespot)
 export(lineagespot_hits)
+export(list_gff3)
+export(list_input)
+export(list_vcf)
 export(merge_vcf)
 export(uniq_variants)
 import(data.table)
@@ -21,4 +24,3 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(stringr,str_squish)
 importFrom(stringr,str_to_upper)
-importFrom(utils,tail)
