--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,3 +24,4 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(stringr,str_squish)
 importFrom(stringr,str_to_upper)
+importFrom(utils,globalVariables)
