--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: lineagespot
 Title: Detection of SARS-CoV-2 lineages in wastewater samples using 
     next-generation sequencing
-Version: 0.99.11
+Version: 0.99.12
 Date: 2021-03-24
 Authors@R: c(
     person(given = "Nikolaos",
@@ -21,6 +21,9 @@ Authors@R: c(
     person("Thodoris", "Karapantsios", email = "-", role = "aut"),
     person("Stamatia", "Laidou", email = "-", role = "aut"),
     person("Elisavet", "Vlachonikola", email = "-", role = "aut"),
+    person("Aspasia", "Orfanou", email = "-", role = "aut"),
+    person("Styliani-Christina", "Fragkouli", email = "-", role = "aut"),
+    person("Sofoklis", "Keisaris", email = "-", role = "aut"),
     person("Anastasia", "Chatzidimitriou", email = "-", role = "aut"),
     person("Agis", "Papadopoulos", email = "-", role = "aut"),
     person("Nikolaos", "Papaioannou", email = "-", role = "aut"),
