--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: lineagespot
 Title: Detection of SARS-CoV-2 lineages in wastewater samples using 
     next-generation sequencing
-Version: 0.99.17
+Version: 0.99.18
 Date: 2021-03-24
 Authors@R: c(
     person(given = "Nikolaos",
@@ -56,7 +56,7 @@ Suggests:
     rmarkdown,
     knitr,
     testthat (>= 3.0.0)
-URL: https://doi.org/10.1038/s41598-022-06625-6
+URL: https://github.com/BiodataAnalysisGroup/lineagespot
 BugReports: https://github.com/BiodataAnalysisGroup/lineagespot/issues
 BiocType: Software
 VignetteBuilder: knitr
